2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Environment_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Comment_Environment_Facilities__c</fullName>
    <description>Comment Environment/Facilities</description>
    <inlineHelpText>Comment Environment/Facilities</inlineHelpText>
    <label>Comment Environment/Facilities</label>
    <type>TextArea</type>
</CustomField>