2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_for_Special_Skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_Special_Skills__c</fullName>
    <description>Enter the comment for Special Skills</description>
    <inlineHelpText>Enter the comment for Special Skills</inlineHelpText>
    <label>Comment for Special Skills</label>
    <type>TextArea</type>
</CustomField>