2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor1_for_the_Company__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor1_for_the_Company__c</fullName>
    <description>Supervisor comment for Materials.</description>
    <inlineHelpText>Supervisor comment for Materials.</inlineHelpText>
    <label>Comment  Materials</label>
    <type>TextArea</type>
</CustomField>