2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor3__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor3__c</fullName>
    <description>Supervisor comment for Tools &amp; Equipment.</description>
    <inlineHelpText>Supervisor comment for Tools &amp; Equipment.</inlineHelpText>
    <label>Comment Tools &amp; Equipment</label>
    <type>TextArea</type>
</CustomField>