2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor4__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor4__c</fullName>
    <description>Supervisor comment for Crating Methods.</description>
    <inlineHelpText>Supervisor comment for Crating Methods.</inlineHelpText>
    <label>Comment  Crating Methods</label>
    <type>TextArea</type>
</CustomField>