2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor5__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor5__c</fullName>
    <description>Supervisor comment for Types of Carton boxes.</description>
    <inlineHelpText>Supervisor comment for Types of Carton boxes.</inlineHelpText>
    <label>Comment on Types of Carton boxes</label>
    <type>TextArea</type>
</CustomField>