2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor_10__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor_10__c</fullName>
    <description>Supervisor comment for  Painting [Crating / Carton].</description>
    <inlineHelpText>Supervisor comment for  Painting [Crating / Carton].</inlineHelpText>
    <label>Comment Painting [Crating / Carton]</label>
    <type>TextArea</type>
</CustomField>