2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor_6__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor_6__c</fullName>
    <description>Comment from Supervisor 6: for  Painting [Material Identificati]</description>
    <inlineHelpText>Comment from Supervisor 6: for  Painting [Material Identificati]</inlineHelpText>
    <label>Comment Painting [Material Identificati]</label>
    <type>TextArea</type>
</CustomField>