2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_from_Supervisor_7__c.field-meta.xml
<CustomField>
    <fullName>Comment_from_Supervisor_7__c</fullName>
    <description>Supervisor comment Painting for Handling.</description>
    <inlineHelpText>Supervisor comment Painting for Handling.</inlineHelpText>
    <label>Comment Painting  [Handling]</label>
    <type>TextArea</type>
</CustomField>