2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Knowledge_Application_of_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comment_Knowledge_Application_of_Sales__c</fullName>
    <description>Comment Knowledge &amp; Application of Salesforce</description>
    <inlineHelpText>Comment Knowledge &amp; Application of Salesforce</inlineHelpText>
    <label>Comment Knowledge &amp; Application of Sales</label>
    <type>TextArea</type>
</CustomField>