2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_knowledge_of_installation_packin__c.field-meta.xml
<CustomField>
    <fullName>Comment_knowledge_of_installation_packin__c</fullName>
    <description>Knowledge of installation, packing/unpacking, crating/uncrating, fabrication of carton boxes according to sales order in Salesforce</description>
    <inlineHelpText>Knowledge of installation, packing/unpacking, crating/uncrating, fabrication of carton boxes according to sales order in Salesforce</inlineHelpText>
    <label>Comment knowledge of installation,packin</label>
    <type>TextArea</type>
</CustomField>