2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Knowledge_of_Registration_Coll__c.field-meta.xml
<CustomField>
    <fullName>Comment_Knowledge_of_Registration_Coll__c</fullName>
    <description>Comment Knowledge of Registration &amp; Collections</description>
    <inlineHelpText>Comment Knowledge of Registration &amp; Collections</inlineHelpText>
    <label>Comment Knowledge of Registration &amp; Coll</label>
    <type>TextArea</type>
</CustomField>