2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Materials_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Comment_Materials_Equipment__c</fullName>
    <description>Comment Materials &amp; Equipment</description>
    <inlineHelpText>Comment Materials &amp; Equipment</inlineHelpText>
    <label>Comment Materials &amp; Equipment</label>
    <type>TextArea</type>
</CustomField>