2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Metals_Data_Entry_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Metals_Data_Entry_Management__c</fullName>
    <description>Comment Metals[Data Entry/Management]</description>
    <inlineHelpText>Comment Metals[Data Entry/Management]</inlineHelpText>
    <label>Comment Metals[Data Entry/Management]</label>
    <type>TextArea</type>
</CustomField>