2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Metals_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Metals_Visual_Check__c</fullName>
    <description>Comment Metals [Visual Check]</description>
    <inlineHelpText>Comment Metals [Visual Check]</inlineHelpText>
    <label>Comment Metals [Visual Check]</label>
    <type>TextArea</type>
</CustomField>