2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Off_Site_works__c.field-meta.xml
<CustomField>
    <fullName>Comment_Off_Site_works__c</fullName>
    <description>Comment for Off Site works</description>
    <inlineHelpText>Comment for Off Site works</inlineHelpText>
    <label>Comment Off Site works</label>
    <type>TextArea</type>
</CustomField>