2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Oral_Written_Comm_skills__c.field-meta.xml
<CustomField>
    <fullName>Comment_Oral_Written_Comm_skills__c</fullName>
    <inlineHelpText>Comment  for Oral &amp; Written Communication skills:</inlineHelpText>
    <label>Comment Oral&amp;Written Comm. skills</label>
    <type>TextArea</type>
</CustomField>