2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Painting_Data_Entry_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Painting_Data_Entry_Management__c</fullName>
    <description>Comment Painting[Data Entry/Management]</description>
    <inlineHelpText>Comment Painting[Data Entry/Management]</inlineHelpText>
    <label>Comment Painting[Data Entry/Management]</label>
    <type>TextArea</type>
</CustomField>