2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Painting_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Painting_Visual_Check__c</fullName>
    <description>Comment Painting [Visual Check ](inclusive of photography)</description>
    <inlineHelpText>Comment Painting [Visual Check] (inclusive of photography)</inlineHelpText>
    <label>Comment Painting [Visual Check]</label>
    <type>TextArea</type>
</CustomField>