2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_prepares_packing_material_accord__c.field-meta.xml
<CustomField>
    <fullName>Comment_prepares_packing_material_accord__c</fullName>
    <description>Comment prepares packing material accord. to mat.</description>
    <inlineHelpText>- Prepare packing material according to material List
 -Update unused quantity accurately
 -Track inventory of materials: replenish / order packing materials</inlineHelpText>
    <label>Comment prepares packing material accord</label>
    <type>TextArea</type>
</CustomField>