2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Prompt_accurate_update_of_inve__c.field-meta.xml
<CustomField>
    <fullName>Comment_Prompt_accurate_update_of_inve__c</fullName>
    <description>Comment Prompt &amp; accurate update of inventory</description>
    <inlineHelpText>Comment Prompt &amp; accurate update of the inventory</inlineHelpText>
    <label>Comment Prompt &amp; accurate update of inve</label>
    <type>TextArea</type>
</CustomField>