2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Receive_Release__c.field-meta.xml
<CustomField>
    <fullName>Comment_Receive_Release__c</fullName>
    <description>Comment for Receive &amp; Release</description>
    <inlineHelpText>Comment for Receive &amp; Release</inlineHelpText>
    <label>Comment Receive &amp; Release</label>
    <type>TextArea</type>
</CustomField>