2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Receiving_Releasing_from_to_3rd__c.field-meta.xml
<CustomField>
    <fullName>Comment_Receiving_Releasing_from_to_3rd__c</fullName>
    <description>Comment Receiving/Releasing from/to 3rd Party</description>
    <inlineHelpText>Comment Receiving/Releasing from/to 3rd Party</inlineHelpText>
    <label>Comment Receiving/Releasing from/to 3rd</label>
    <type>TextArea</type>
</CustomField>