2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Security_Operations__c.field-meta.xml
<CustomField>
    <fullName>Comment_Security_Operations__c</fullName>
    <description>Comment Security Operations</description>
    <inlineHelpText>Comment Security Operations</inlineHelpText>
    <label>Comment Security Operations</label>
    <type>TextArea</type>
</CustomField>