2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Space_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Space_Management__c</fullName>
    <description>Comment Space Management</description>
    <inlineHelpText>Comment Space Management</inlineHelpText>
    <label>Comment Space Management</label>
    <type>TextArea</type>
</CustomField>