2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Stone_Data_Entry_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Stone_Data_Entry_Management__c</fullName>
    <description>Comment Stone [Data Entry/Management]</description>
    <inlineHelpText>Comment Stone [Data Entry/Management]</inlineHelpText>
    <label>Comment Stone [Data Entry/Management]</label>
    <type>TextArea</type>
</CustomField>