2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Textile_DataEntry_Management__c.field-meta.xml
<CustomField>
    <fullName>Comment_Textile_DataEntry_Management__c</fullName>
    <description>Comment Textile [Data Entry/Management]</description>
    <inlineHelpText>Comment Textile [Data Entry/  Management]</inlineHelpText>
    <label>Comment Textile [DataEntry/Management]</label>
    <type>TextArea</type>
</CustomField>