2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>Comment_Visual_Check__c</fullName>
    <description>Comment for Visual Check</description>
    <inlineHelpText>Comment for Visual Check</inlineHelpText>
    <label>Comment Visual Check</label>
    <type>TextArea</type>
</CustomField>