2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comment_WorksonPaper_VisualCheck__c.field-meta.xml
<CustomField>
    <fullName>Comment_WorksonPaper_VisualCheck__c</fullName>
    <description>Works on Paper (Framed / Unframed &amp; Matted)</description>
    <inlineHelpText>Works on Paper (Framed / Unframed &amp; Matted)</inlineHelpText>
    <label>Comment WorksonPaper[VisualCheck]</label>
    <type>TextArea</type>
</CustomField>