2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentCeramics_Glass_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>CommentCeramics_Glass_Visual_Check__c</fullName>
    <description>CommentCeramics&amp;Glass[Visual Check]</description>
    <inlineHelpText>CommentCeramics&amp;Glass[Visual Check]</inlineHelpText>
    <label>CommentCeramics&amp;Glass[Visual Check]</label>
    <type>TextArea</type>
</CustomField>