2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentContemporaryObj_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>CommentContemporaryObj_Visual_Check__c</fullName>
    <description>-Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works</description>
    <inlineHelpText>-Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works</inlineHelpText>
    <label>CommentContemporaryObj[Visual Check]</label>
    <type>TextArea</type>
</CustomField>