2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentOtherWksOnPaper_DataEntry_Managem__c.field-meta.xml
<CustomField>
    <fullName>CommentOtherWksOnPaper_DataEntry_Managem__c</fullName>
    <description>Other works on Paper (Maps, Dopcuments, Manuscripts, Books, etc)</description>
    <inlineHelpText>Other works on Paper (Maps, Documents, Manuscripts, Books, etc)</inlineHelpText>
    <label>CommentOtherWksOnPaper[DataEntry/Managem</label>
    <type>TextArea</type>
</CustomField>