2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentOversizeObject_DataEntry_Managemt__c.field-meta.xml
<CustomField>
    <fullName>CommentOversizeObject_DataEntry_Managemt__c</fullName>
    <description>CommentOversizeObject[DataEntry/Management]</description>
    <inlineHelpText>Comment Oversize Object [DataEntry / Management]</inlineHelpText>
    <label>CommentOversizeObject[DataEntry/Managemt</label>
    <type>TextArea</type>
</CustomField>