2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentOversizeObject_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>CommentOversizeObject_Visual_Check__c</fullName>
    <description>CommentOversizeObject[Visual Check]</description>
    <inlineHelpText>CommentOversizeObject[Visual Check]</inlineHelpText>
    <label>CommentOversizeObject[Visual Check]</label>
    <type>TextArea</type>
</CustomField>