2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentPhotographic_DataEntry_Management__c.field-meta.xml
<CustomField>
    <fullName>CommentPhotographic_DataEntry_Management__c</fullName>
    <description>CommentPhotographic[DataEntry/Management]</description>
    <inlineHelpText>Comment Photographic [Data Entry /Management]</inlineHelpText>
    <label>CommentPhotographic[DataEntry/Management</label>
    <type>TextArea</type>
</CustomField>