2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentPhotographic_Visual_Check__c.field-meta.xml
<CustomField>
    <fullName>CommentPhotographic_Visual_Check__c</fullName>
    <description>Comment Photographic [Visual Check]</description>
    <inlineHelpText>Comment Photographic [Visual Check]</inlineHelpText>
    <label>CommentPhotographic[Visual Check]</label>
    <type>TextArea</type>
</CustomField>