2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Comments_Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Comments_Site_Survey__c</fullName>
    <description>Comments for Site Survey :</description>
    <inlineHelpText>Comments  for Site Survey :</inlineHelpText>
    <label>Comment Site Survey :</label>
    <type>TextArea</type>
</CustomField>