2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/CommentWorksonPaper_DataEntry_Managemt__c.field-meta.xml
<CustomField>
    <fullName>CommentWorksonPaper_DataEntry_Managemt__c</fullName>
    <description>Works on Paper (Framed / Unframed &amp; Matted)</description>
    <inlineHelpText>Works on Paper (Framed / Unframed &amp; Matted)</inlineHelpText>
    <label>CommentWorksonPaper[DataEntry/Managemt]</label>
    <type>TextArea</type>
</CustomField>