2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Compliance_Safety_regulation_and_SOP__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Safety_regulation_and_SOP__c</fullName>
    <description>Compliance: Safety regulation and SOP</description>
    <inlineHelpText>Compliance: Safety regulation and SOP
 -Ensure that facilities meet government regulations and environmental, health and security standards
 -Follow quality standards and comply with procedures, rules, and regulations; such as E-warehouse checklist, etc.</inlineHelpText>
    <label>Compliance: Safety regulation and SOP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>