2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Employee Review Forms</relationshipLabel>
    <relationshipName>Employee_Review_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>