2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/ContemporaryObject_DataEntry_Management__c.field-meta.xml
<CustomField>
    <fullName>ContemporaryObject_DataEntry_Management__c</fullName>
    <description>ContemporaryObject[DataEntry/Management]</description>
    <inlineHelpText>ContemporaryObject[DataEntry/Management]</inlineHelpText>
    <label>ContemporaryObject[DataEntry/Management]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>