2nd training/Community/Community/Community1/force-app/main/default/objects/Employee_Review_Form__c/fields/ContemporaryObjects_Material_Identificat__c.field-meta.xml
<CustomField>
    <fullName>ContemporaryObjects_Material_Identificat__c</fullName>
    <description>Material Identification for Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works).</description>
    <inlineHelpText>Material Identification for Contemporary Objects / Plastics &amp; Electronic materials (inclusive of Neon works).</inlineHelpText>
    <label>ContemporaryObjects[Material Identificat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>